# crewai_wedding_scrapers

./: .gitignore  README.md  pyproject.toml
src/wedding_scrapers/: crew.py  main.py
src/wedding_scrapers/config/: agents.yaml  tasks.yaml
